--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,5 +18,5 @@ main:
   - title: "Experience"
     url: "/#-experience"
 
-  # - title: "Internships"
-  #   url: "/#-internships"
+  - title: "Services"
+    url: "/#services"
