--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Ying Li"
   avatar           : "images/avatar.jpg"
-  bio              : "PhD student at UCLA "
+  bio              : ""
   location         : "Los Angeles, United States"
   employer         :
   pubmed           : 
