--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Ying Li(李滢)"
-description              : "PhD student at UCLA. Focusing on security&privacy"
+description              : "PhD student at UCLA."
 repository               : "y1ngli/y1ngli.github.io"
 google_scholar_stats_use_cdn : false #true
 
